Bug 1209446 - Make sure mFrameInProgress flag is set to true only when we actually begin drawing new frame. r=nical

--HG--
extra : rebase_source : ebb7d61be07e6cd9f2bcd920e3987dca9ac8c358

Signed-off-by: Raine Makelainen <raine.makelainen@jolla.com>